[gd_scene load_steps=4 format=2]

[ext_resource path="res://redesign/scenes/MenuBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://redesign/scenes/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://redesign/scripts/MainMenuBox.gd" type="Script" id=3]

[node name="MenuBox" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="ScrollContainer" parent="." index="1"]
follow_focus = true

[node name="MenuButtons" parent="ScrollContainer" index="0"]
margin_bottom = 296.0

[node name="ResumeButton" parent="ScrollContainer/MenuButtons" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 674.0
text = "Resume"

[node name="RestartButton" parent="ScrollContainer/MenuButtons" index="1" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 51.0
margin_right = 674.0
margin_bottom = 92.0
text = "Restart"

[node name="LevelSelectButton" parent="ScrollContainer/MenuButtons" index="2" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 102.0
margin_right = 674.0
margin_bottom = 143.0
text = "Level Select"

[node name="SettingsButton" parent="ScrollContainer/MenuButtons" index="3" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 153.0
margin_right = 674.0
margin_bottom = 194.0
text = "Settings"

[node name="HelpButton" parent="ScrollContainer/MenuButtons" index="4" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 204.0
margin_right = 674.0
margin_bottom = 245.0
text = "Help"

[node name="QuitButton" parent="ScrollContainer/MenuButtons" index="5" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 255.0
margin_right = 674.0
margin_bottom = 296.0
text = "Quit"

[connection signal="pressed" from="ScrollContainer/MenuButtons/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuButtons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="ScrollContainer/MenuButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
